work in progress

--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <style>
+        img { width: 500px }
+    </style>
 </head>
 <body>
-
+<h1>Buy Private Islands!</h1>
+<h2>Fancy Island:</h2>
+<img src= static/island1.jpeg>
+<h2> Simple Island: </h2>
+<img src= static/island2.jpeg>
+<h2> Arcipelago: </h2>
+<img src= static/island3.jpeg>
 </body>
 </html>
