--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -15,5 +15,6 @@
 <img src= static/island2.jpeg>
 <h2> Arcipelago: </h2>
 <img src= static/island3.jpeg>
+<a href="{{url_for('product_page')}}">product</a>
 </body>
 </html>
