--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -5,6 +5,8 @@
     <title>Product</title>
 </head>
 <body>
+<h1> Price: A LOT</h1>
 
+<button><a href="{{url_for('cart_page')}}">add to cart</a></button>
 </body>
 </html>
